--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-.apt_*
+*.apt_generated*
 
 ##############################
 ## Gradle
