--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -12,16 +12,56 @@
     <artifactId>domain</artifactId>
 
     <dependencies>
+
+      <dependency>
+        <groupId>com.mysema.querydsl</groupId>
+        <artifactId>querydsl-hql</artifactId>
+        <version>1.9.7</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.mysema.querydsl</groupId>
+        <artifactId>querydsl-core</artifactId>
+        <version>1.9.7</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.mysema.querydsl</groupId>
+        <artifactId>querydsl-apt</artifactId>
+        <version>1.9.7</version>
+      </dependency>
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
-        </dependency>        
+        </dependency>     
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.3.2</version>
-        </dependency>        
+        </dependency>           
+              
     </dependencies>
-
-</project>
+    <build>
+        <plugins>
+          <plugin>
+            <groupId>com.mysema.maven</groupId>
+            <artifactId>apt-maven-plugin</artifactId>
+            <version>1.1.3</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>process</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>target/generated-sources/java</outputDirectory>
+                  <processor>com.mysema.query.apt.hibernate.HibernateAnnotationProcessor</processor>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+        </build>
+</project>  
